updates style and index for settings bar across tools

--- a/tools/audio-synthesizer/index.html
+++ b/tools/audio-synthesizer/index.html
@@ -81,7 +81,7 @@
         </div>
     </main>
     <footer class="footer">
-        <p>Built with the Web Audio API.</p>
+        <p>Built with the Web Audio API. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
