--- a/tools/door-spring-app/index.html
+++ b/tools/door-spring-app/index.html
@@ -101,6 +101,16 @@
       width: 100%;
       height: 400px;
     }
+  
+  .support-link {
+    color: inherit;
+    font-weight: 600;
+    text-decoration: none;
+  }
+
+  .support-link:hover {
+    text-decoration: underline;
+  }
   </style>
 </head>
 <body>
@@ -228,7 +238,7 @@
 </main>
 
 <footer>
-  <p>&copy; 2025 - Trap Door Calculator with Auto-Scaling View</p>
+  <p>&copy; 2025 - Trap Door Calculator with Auto-Scaling View <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
 </footer>
 
 <script>
