--- a/tools/fits/index.html
+++ b/tools/fits/index.html
@@ -615,6 +615,16 @@
         .advanced-only { display: none; }
         body.advanced-mode .simple-only { display: none; }
         body.advanced-mode .advanced-only { display: block; }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 <body>
@@ -893,7 +903,7 @@
     </main>
 
     <footer class="footer">
-        <p>ISO 286-1:2010 / ISO 286-2:2010 | Engineering Tools</p>
+        <p>ISO 286-1:2010 / ISO 286-2:2010 | Engineering Tools <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
     </footer>
 
     <script>
