--- a/tools/mjf-buy-vs-outsource/index.html
+++ b/tools/mjf-buy-vs-outsource/index.html
@@ -148,6 +148,16 @@
             .tab-link { flex: 1 1 45%; text-align: center; }
             .input-grid { grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); }
         }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 <body>
@@ -411,8 +421,8 @@
     </main>
 
     <footer class="footer">
-        &copy; 2025 Engineering Tools. All tools are for educational and trade-study purposes.
-    </footer>
+        &copy; 2025 Engineering Tools. All tools are for educational and trade-study purposes. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a>
+</footer>
 
     <script>
         const TOOL_MODULE_NAME = 'manufacturing';
