--- a/tools/mtbf/index.html
+++ b/tools/mtbf/index.html
@@ -93,6 +93,16 @@
     footer {
       font-size: 0.9rem;
     }
+  
+  .support-link {
+    color: inherit;
+    font-weight: 600;
+    text-decoration: none;
+  }
+
+  .support-link:hover {
+    text-decoration: underline;
+  }
   </style>
 </head>
 <body>
@@ -159,7 +169,7 @@
 </main>
 
 <footer>
-  <p>&copy; 2025 - Reliability Prediction Tool</p>
+  <p>&copy; 2025 - Reliability Prediction Tool <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
 </footer>
 
 <script>
