--- a/tools/random-generator/index.html
+++ b/tools/random-generator/index.html
@@ -89,6 +89,9 @@
             <button id="clearHistoryBtn" class="clear-btn">Clear History</button>
         </aside>
     </div>
+    <footer class="footer">
+        <p>Engineering Tools &mdash; For educational and preliminary design purposes only. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
+    </footer>
     <script src="script.js?v=2"></script>
 </body>
 </html>
