--- a/tools/rlc-circuit-analyzer/index.html
+++ b/tools/rlc-circuit-analyzer/index.html
@@ -180,7 +180,7 @@
     </main>
 
     <footer class="footer">
-        <p>Investigate the interplay of resistance, inductance, and capacitance.</p>
+        <p>Investigate the interplay of resistance, inductance, and capacitance. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
     </footer>
 
     <script src="script.js"></script>
