--- a/tools/simple_thermal/index.html
+++ b/tools/simple_thermal/index.html
@@ -42,6 +42,16 @@
     .transient-only, .steady-state-only, .plate-dims, .cylinder-dims, .heatsink-dims { display: none; } /* Hide all by default, JS will show */
     @media (max-width: 768px) { main { padding: 1rem; } label { width: 180px; } .col-container { gap: 1rem; } }
     @media (max-width: 480px) { label { width: 100%; margin-right: 0; } input[type="number"], select { width: 100% !important; margin-bottom: 1rem; } h1 { font-size: 1.5rem; } }
+  
+  .support-link {
+    color: inherit;
+    font-weight: 600;
+    text-decoration: none;
+  }
+
+  .support-link:hover {
+    text-decoration: underline;
+  }
   </style>
 </head>
 <body>
@@ -146,7 +156,7 @@
     </ul>
   </details>
 </main>
-<footer><p>© 2025 - Thermal & Heatsink Calculator</p></footer>
+<footer><p>© 2025 - Thermal & Heatsink Calculator <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p></footer>
 
 <script>
   let pyodide = null, pythonLoaded = false;
