--- a/tools/snap-fit-cantilever/index.html
+++ b/tools/snap-fit-cantilever/index.html
@@ -214,6 +214,16 @@
             .tool-layout { grid-template-columns: 1fr; }
             .tooltip-trigger { right: 0; top: 36px; }
         }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 
@@ -342,7 +352,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes.</p>
+        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
     </footer>
 
     <script>
