--- a/tools/unit-converter/index.html
+++ b/tools/unit-converter/index.html
@@ -420,6 +420,23 @@
                 font-size: 1.8rem;
             }
         }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
+
+    .footer {
+      text-align: center;
+      padding: 24px 24px 32px;
+      color: var(--text-secondary, var(--text-light, var(--muted, #6b7280)));
+      font-size: 0.9rem;
+    }
     </style>
 </head>
 <body>
@@ -528,6 +545,10 @@
         </aside>
     </div>
     </main>
+
+    <footer class="footer">
+        <p>Engineering Tools &mdash; For educational and preliminary design purposes only. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
+    </footer>
 
     <script type="module">
         import { initDualConverter } from "./shared/dual-core.js";
