--- a/tools/unit_conversion_prototyping/curated_systems/index.html
+++ b/tools/unit_conversion_prototyping/curated_systems/index.html
@@ -246,6 +246,16 @@
         @media (max-width: 960px) {
             .tool-layout { grid-template-columns: 1fr; }
         }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 <body>
@@ -329,7 +339,8 @@
         </div>
     </main>
 
-    <footer>&copy; 2025 Engineering Tools. All tools are for educational purposes.</footer>
+    <footer>&copy; 2025 Engineering Tools. All tools are for educational purposes. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a>
+</footer>
 
     <script>
         const TOOL_MODULE_NAME = 'unit_prototypes';
