--- a/tools/unit_conversion_prototyping/pairwise_converter/index.html
+++ b/tools/unit_conversion_prototyping/pairwise_converter/index.html
@@ -201,6 +201,16 @@
         @media (max-width: 980px) {
             .tool-layout { grid-template-columns: 1fr; }
         }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 <body>
@@ -282,7 +292,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes.</p>
+        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
     </footer>
 
     <script>
