--- a/index.html
+++ b/index.html
@@ -209,6 +209,16 @@
         color: var(--muted);
         font-size: 0.9rem;
       }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
   </head>
   <body>
@@ -250,8 +260,8 @@
 
     <footer>
       &copy; <span id="year"></span> Engineering Tools. Built for learning and
-      rapid engineering trade studies.
-    </footer>
+      rapid engineering trade studies. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a>
+</footer>
 
     <script>
       const searchInput = document.getElementById("search");
