--- a/tools/bolt-torque-exp/index.html
+++ b/tools/bolt-torque-exp/index.html
@@ -478,6 +478,16 @@
         }
         @keyframes spin { to { transform: rotate(360deg); } }
         .loading-text { margin-top: 16px; font-weight: 600; color: var(--text-color); }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 
@@ -851,7 +861,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 Engineering Tools. All calculations are for reference only.</p>
+        <p>&copy; 2025 Engineering Tools. All calculations are for reference only. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
     </footer>
 
     <script>
