--- a/tools/composite-wall/index.html
+++ b/tools/composite-wall/index.html
@@ -377,6 +377,16 @@
             fieldset { padding: 16px 14px 10px; }
             .tooltip-trigger { display: none; }
         }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 
@@ -555,7 +565,8 @@
         </div>
     </main>
 
-    <footer>&copy; 2025 Engineering Tools. Built for quick heat loss checks and educational walkthroughs.</footer>
+    <footer>&copy; 2025 Engineering Tools. Built for quick heat loss checks and educational walkthroughs. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a>
+</footer>
 
     <script>
         let toolDocumentation = {};
