--- a/tools/deck-material-estimator/index.html
+++ b/tools/deck-material-estimator/index.html
@@ -137,6 +137,16 @@
             .tooltip-trigger { right: 0; top: 32px; }
             .card { padding: 16px; }
         }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 <body>
@@ -262,7 +272,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 Engineering Tools. Calculations provided for planning and educational use.</p>
+        <p>&copy; 2025 Engineering Tools. Calculations provided for planning and educational use. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
     </footer>
 
     <script>
