--- a/tools/edge_tone/index.html
+++ b/tools/edge_tone/index.html
@@ -128,6 +128,16 @@
         .equation-card { background: rgba(248, 250, 252, 0.75); border: 1px solid var(--border-color); border-radius: 8px; padding: 12px 16px; }
         .equation-card strong { display: block; margin-bottom: 6px; color: var(--secondary-color); }
         .equation-card .equation-expression { display: block; margin-bottom: 8px; }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 
@@ -314,7 +324,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes.</p>
+        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
     </footer>
 
     <script>
