--- a/tools/example_tool_compact/index.html
+++ b/tools/example_tool_compact/index.html
@@ -260,6 +260,16 @@
             .tabs { flex-wrap: wrap; }
             .tab-link { flex: 1 1 45%; text-align: center; }
         }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 
@@ -366,7 +376,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes.</p>
+        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
     </footer>
 
     <script>
