--- a/tools/example_tool_settings/index.html
+++ b/tools/example_tool_settings/index.html
@@ -390,6 +390,16 @@
             .settings-panel { width: 100%; }
             .settings-button { padding: 8px 12px; }
         }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 <body data-theme="system" data-density="comfortable">
@@ -556,7 +566,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes.</p>
+        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
     </footer>
 
     <script>
