--- a/tools/fastener-bolt-torque_openai/index.html
+++ b/tools/fastener-bolt-torque_openai/index.html
@@ -281,6 +281,16 @@
             .input-group { padding-right: 24px; }
             .summary-card { position: static; }
         }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 
@@ -520,7 +530,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 Engineering Tools. Calculations provided for educational use.</p>
+        <p>&copy; 2025 Engineering Tools. Calculations provided for educational use. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
     </footer>
 
     <script>
