--- a/tools/friction-lookup/index.html
+++ b/tools/friction-lookup/index.html
@@ -328,6 +328,23 @@
                 border-top: 1px solid var(--border);
             }
         }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
+
+    .footer {
+      text-align: center;
+      padding: 24px 24px 32px;
+      color: var(--text-secondary, var(--text-light, var(--muted, #6b7280)));
+      font-size: 0.9rem;
+    }
     </style>
 </head>
 <body>
@@ -426,6 +443,10 @@
             </aside>
         </div>
     </main>
+
+    <footer class="footer">
+        <p>Engineering Tools &mdash; For educational and preliminary design purposes only. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
+    </footer>
 
     <script type="module">
         import { initFrictionLookup } from "./shared/friction-core.js";
