--- a/tools/orders-of-magnitude-atlas/index.html
+++ b/tools/orders-of-magnitude-atlas/index.html
@@ -830,6 +830,16 @@
         body[data-density="compact"] .input-group select { padding: 6px 10px; font-size: 0.85rem; }
         body[data-density="compact"] .results-grid { gap: 10px; }
         body[data-density="compact"] .result-item { padding: 12px; }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 
@@ -1065,7 +1075,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes.</p>
+        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
     </footer>
 
     <script>
