--- a/tools/simple-acoustics/index.html
+++ b/tools/simple-acoustics/index.html
@@ -386,6 +386,16 @@
         body[data-mode="quick"] .advanced-toggle { display: none; }
         body[data-mode="quick"] #advanced-results { display: none; }
         body[data-mode="full"] .quick-only { display: none; }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 <body data-mode="quick">
@@ -790,7 +800,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes.</p>
+        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
     </footer>
 
     <script>
