--- a/tools/timer-toolkit/index.html
+++ b/tools/timer-toolkit/index.html
@@ -80,6 +80,9 @@
             </div>
         </div>
     </main>
+    <footer class="footer">
+        <p>Engineering Tools &mdash; For educational and preliminary design purposes only. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
