--- a/tools/torque-transfer/index.html
+++ b/tools/torque-transfer/index.html
@@ -41,6 +41,16 @@
       h1 { font-size: 1.3rem; }
       details summary { font-size: 1rem; }
     }
+  
+  .support-link {
+    color: inherit;
+    font-weight: 600;
+    text-decoration: none;
+  }
+
+  .support-link:hover {
+    text-decoration: underline;
+  }
   </style>
 </head>
 <body>
@@ -187,7 +197,7 @@
 </main>
 
 <footer>
-  <p>&copy; 2025 - Torque Transfer Calculator</p>
+  <p>&copy; 2025 - Torque Transfer Calculator <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
 </footer>
 
 <script>
