--- a/tools/unit_conversion_prototyping/scale_explorer/index.html
+++ b/tools/unit_conversion_prototyping/scale_explorer/index.html
@@ -210,6 +210,16 @@
         footer { background: var(--bg-card); border-top: 1px solid var(--border-color); text-align: center; font-size: 0.85rem; color: var(--text-muted); padding: 18px 0; margin-top: auto; }
 
         @media (max-width: 980px) { .tool-layout { grid-template-columns: 1fr; } }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 <body>
@@ -287,7 +297,8 @@
         </div>
     </main>
 
-    <footer>&copy; 2025 Engineering Tools. All tools are for educational purposes.</footer>
+    <footer>&copy; 2025 Engineering Tools. All tools are for educational purposes. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a>
+</footer>
 
     <script>
         const TOOL_MODULE_NAME = 'unit_prototypes';
