--- a/tools/vibration-isolation-designer/index.html
+++ b/tools/vibration-isolation-designer/index.html
@@ -635,6 +635,16 @@
             .tabs { flex-direction: column; }
             .mode-toggle-wrap { flex-direction: column; align-items: flex-start; }
         }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
     </style>
 </head>
 
@@ -1233,7 +1243,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes.</p>
+        <p>&copy; 2025 Engineering Tools. All tools are for educational purposes. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
     </footer>
 
     <script>
