--- a/tools/wire-sizing/index.html
+++ b/tools/wire-sizing/index.html
@@ -635,6 +635,23 @@
             .wire-specs { grid-template-columns: 1fr; }
             .wire-size-value { font-size: 2.5rem; }
         }
+    
+    .support-link {
+      color: inherit;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .support-link:hover {
+      text-decoration: underline;
+    }
+
+    .footer {
+      text-align: center;
+      padding: 24px 24px 32px;
+      color: var(--text-secondary, var(--text-light, var(--muted, #6b7280)));
+      font-size: 0.9rem;
+    }
     </style>
 </head>
 <body>
@@ -835,6 +852,10 @@
             </div>
         </div>
     </main>
+
+    <footer class="footer">
+        <p>Engineering Tools &mdash; For educational and preliminary design purposes only. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a></p>
+    </footer>
 
     <script>
         // =====================================================================
