--- a/tools/unit-converter/index.html
+++ b/tools/unit-converter/index.html
@@ -7,6 +7,26 @@
     <script src="https://cdn.jsdelivr.net/pyodide/v0.25.1/full/pyodide.js"></script>
     <style>
         :root {
+            --bg-primary: #f8f9fb;
+            --bg-secondary: #ffffff;
+            --bg-card: #ffffff;
+            --bg-input: #f4f5f7;
+            --surface: #ffffff;
+            --border: #e5e7eb;
+            --border-light: #d1d5db;
+            --muted: #6b7280;
+            --text: #111827;
+            --text-secondary: #4b5563;
+            --accent: #3b82f6;
+            --accent-soft: rgba(59, 130, 246, 0.1);
+            --shadow: 0 1px 3px rgba(0,0,0,0.1);
+            --shadow-lg: 0 12px 28px rgba(15, 23, 42, 0.18);
+            --radius-lg: 12px;
+            --radius-md: 8px;
+            --font-mono: 'SF Mono', 'Fira Code', 'Consolas', monospace;
+        }
+
+        body[data-theme="dark"] {
             --bg-primary: #0a0a0a;
             --bg-secondary: #141414;
             --bg-card: #1a1a1a;
@@ -17,12 +37,25 @@
             --muted: #888888;
             --text: #ffffff;
             --text-secondary: #a0a0a0;
-            --accent: #3b82f6;
-            --accent-soft: rgba(59, 130, 246, 0.15);
             --shadow: 0 4px 20px rgba(0,0,0,0.4);
-            --radius-lg: 12px;
-            --radius-md: 8px;
-            --font-mono: 'SF Mono', 'Fira Code', 'Consolas', monospace;
+            --shadow-lg: 0 16px 32px rgba(0, 0, 0, 0.55);
+        }
+
+        @media (prefers-color-scheme: dark) {
+            body[data-theme="system"] {
+                --bg-primary: #0a0a0a;
+                --bg-secondary: #141414;
+                --bg-card: #1a1a1a;
+                --bg-input: #222222;
+                --surface: #1a1a1a;
+                --border: #2a2a2a;
+                --border-light: #333333;
+                --muted: #888888;
+                --text: #ffffff;
+                --text-secondary: #a0a0a0;
+                --shadow: 0 4px 20px rgba(0,0,0,0.4);
+                --shadow-lg: 0 16px 32px rgba(0, 0, 0, 0.55);
+            }
         }
 
         * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -57,6 +90,31 @@
             font-weight: 600;
             font-size: 1.25rem;
             text-decoration: none;
+        }
+
+        .nav-brand:hover {
+            text-decoration: none;
+        }
+
+        .nav-actions {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+        }
+
+        .settings-button {
+            border: 1px solid var(--border);
+            background: var(--bg-card);
+            color: var(--text);
+            font-weight: 600;
+            font-size: 0.85rem;
+            padding: 8px 14px;
+            border-radius: 999px;
+            cursor: pointer;
+        }
+
+        .settings-button:hover {
+            background: var(--bg-input);
         }
 
         .nav-title {
@@ -421,6 +479,114 @@
             }
         }
     
+        /* Settings Panel */
+        .settings-overlay {
+            position: fixed;
+            inset: 0;
+            background: rgba(0, 0, 0, 0.2);
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.2s ease, visibility 0.2s ease;
+            z-index: 1000;
+        }
+        .settings-overlay.open { opacity: 1; visibility: visible; }
+
+        .settings-panel {
+            position: fixed;
+            top: 0;
+            right: 0;
+            width: 340px;
+            height: 100vh;
+            background: var(--bg-card);
+            border-left: 1px solid var(--border);
+            box-shadow: var(--shadow-lg);
+            transform: translateX(100%);
+            transition: transform 0.2s ease;
+            z-index: 1001;
+            display: flex;
+            flex-direction: column;
+        }
+        .settings-panel.open { transform: translateX(0); }
+
+        .settings-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 16px 20px;
+            border-bottom: 1px solid var(--border);
+        }
+        .settings-header h3 { margin: 0; font-size: 1.05rem; color: var(--text); }
+
+        .settings-close {
+            background: none;
+            border: none;
+            font-size: 0.85rem;
+            font-weight: 600;
+            color: var(--text-secondary);
+            cursor: pointer;
+        }
+        .settings-close:hover { color: var(--text); }
+
+        .settings-content { padding: 16px 20px; overflow-y: auto; }
+        .settings-section { margin-bottom: 20px; }
+        .settings-section h4 { margin-bottom: 10px; color: var(--text); font-size: 0.95rem; }
+
+        .setting-row {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 12px;
+            margin-bottom: 14px;
+        }
+        .setting-label { font-weight: 600; font-size: 0.9rem; color: var(--text); }
+        .setting-help { font-size: 0.8rem; color: var(--text-secondary); }
+
+        .segmented {
+            display: inline-flex;
+            gap: 4px;
+            background: var(--bg-input);
+            border: 1px solid var(--border);
+            border-radius: 999px;
+            padding: 4px;
+        }
+        .segmented button {
+            border: none;
+            background: transparent;
+            color: var(--text-secondary);
+            font-size: 0.8rem;
+            font-weight: 600;
+            padding: 6px 10px;
+            border-radius: 999px;
+            cursor: pointer;
+        }
+        .segmented button.active {
+            background: var(--accent);
+            color: #fff;
+        }
+
+        .settings-footer {
+            padding: 16px 20px;
+            border-top: 1px solid var(--border);
+        }
+
+        .btn-secondary {
+            display: inline-block;
+            padding: 10px 16px;
+            font-size: 0.9rem;
+            font-weight: 600;
+            border: 1px solid var(--border);
+            border-radius: 6px;
+            cursor: pointer;
+            background: transparent;
+            color: var(--text);
+            width: 100%;
+        }
+        .btn-secondary:hover { background: var(--bg-input); }
+
+        @media (max-width: 720px) {
+            .settings-panel { width: 100%; }
+        }
+
     .support-link {
       color: inherit;
       font-weight: 600;
@@ -434,18 +600,58 @@
     .footer {
       text-align: center;
       padding: 24px 24px 32px;
-      color: var(--text-secondary, var(--text-light, var(--muted, #6b7280)));
+      color: var(--text-secondary);
       font-size: 0.9rem;
     }
     </style>
 </head>
-<body>
+<body data-theme="system">
     <header class="navbar">
         <nav class="nav-container">
-            <a href="/index.html" target="_top" class="nav-brand">← Engineering Tools</a>
-            <span>Engineering Unit Converter</span>
+            <a href="../../index.html" class="nav-brand">Engineering Tools</a>
+            <div class="nav-actions">
+                <button class="settings-button" id="settings-button" type="button">Settings</button>
+            </div>
         </nav>
     </header>
+
+    <div class="settings-overlay" id="settings-overlay" aria-hidden="true"></div>
+    <aside class="settings-panel" id="settings-panel" aria-hidden="true">
+        <div class="settings-header">
+            <h3>Tool Settings</h3>
+            <button class="settings-close" id="settings-close" type="button">Close</button>
+        </div>
+        <div class="settings-content">
+            <div class="settings-section">
+                <h4>Appearance</h4>
+                <div class="setting-row">
+                    <div>
+                        <div class="setting-label">Theme</div>
+                        <div class="setting-help">Light, dark, or system default.</div>
+                    </div>
+                    <div class="segmented" role="group" aria-label="Theme">
+                        <button type="button" data-theme="light">Light</button>
+                        <button type="button" data-theme="dark">Dark</button>
+                        <button type="button" data-theme="system">System</button>
+                    </div>
+                </div>
+                <div class="setting-row">
+                    <div>
+                        <div class="setting-label">Precision</div>
+                        <div class="setting-help">Decimal places in results.</div>
+                    </div>
+                    <div class="segmented" role="group" aria-label="Precision">
+                        <button type="button" data-precision="4">4 dp</button>
+                        <button type="button" data-precision="6">6 dp</button>
+                        <button type="button" data-precision="8">8 dp</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="settings-footer">
+            <button class="btn-secondary" id="settings-reset" type="button">Reset to defaults</button>
+        </div>
+    </aside>
 
     <main class="container">
     <div class="dual-shell" data-dual>
@@ -553,6 +759,87 @@
     <script type="module">
         import { initDualConverter } from "./shared/dual-core.js";
 
+        // Settings management
+        const STORAGE_KEY = 'unit-converter-settings';
+        const defaultSettings = {
+            theme: 'system',
+            precision: 6,
+        };
+        let settings = { ...defaultSettings };
+
+        function saveSettings() {
+            localStorage.setItem(STORAGE_KEY, JSON.stringify(settings));
+        }
+
+        function loadSettings() {
+            const stored = localStorage.getItem(STORAGE_KEY);
+            if (stored) {
+                try {
+                    settings = { ...defaultSettings, ...JSON.parse(stored) };
+                } catch (e) {
+                    settings = { ...defaultSettings };
+                }
+            }
+        }
+
+        function setSegmentedActive(selector, value, dataAttr) {
+            document.querySelectorAll(selector).forEach(button => {
+                const isActive = button.dataset[dataAttr] === String(value);
+                button.classList.toggle('active', isActive);
+            });
+        }
+
+        function applySettings() {
+            document.body.dataset.theme = settings.theme;
+            setSegmentedActive('.settings-panel [data-theme]', settings.theme, 'theme');
+            setSegmentedActive('.settings-panel [data-precision]', settings.precision, 'precision');
+        }
+
+        function toggleSettingsPanel(open) {
+            const panel = document.getElementById('settings-panel');
+            const overlay = document.getElementById('settings-overlay');
+            const isOpen = open ?? !panel.classList.contains('open');
+            panel.classList.toggle('open', isOpen);
+            overlay.classList.toggle('open', isOpen);
+            panel.setAttribute('aria-hidden', isOpen ? 'false' : 'true');
+            overlay.setAttribute('aria-hidden', isOpen ? 'false' : 'true');
+        }
+
+        function handleSettingChange(key, value) {
+            settings[key] = value;
+            saveSettings();
+            applySettings();
+        }
+
+        // Initialize settings
+        loadSettings();
+        applySettings();
+
+        // Bind settings controls
+        document.getElementById('settings-button').addEventListener('click', () => toggleSettingsPanel(true));
+        document.getElementById('settings-close').addEventListener('click', () => toggleSettingsPanel(false));
+        document.getElementById('settings-overlay').addEventListener('click', () => toggleSettingsPanel(false));
+
+        document.querySelectorAll('.settings-panel [data-theme]').forEach(button => {
+            button.addEventListener('click', () => handleSettingChange('theme', button.dataset.theme));
+        });
+        document.querySelectorAll('.settings-panel [data-precision]').forEach(button => {
+            button.addEventListener('click', () => handleSettingChange('precision', Number(button.dataset.precision)));
+        });
+
+        document.getElementById('settings-reset').addEventListener('click', () => {
+            settings = { ...defaultSettings };
+            saveSettings();
+            applySettings();
+        });
+
+        document.addEventListener('keydown', (event) => {
+            if (event.key === 'Escape') {
+                toggleSettingsPanel(false);
+            }
+        });
+
+        // Initialize converter
         document.addEventListener("DOMContentLoaded", () => {
             const container = document.querySelector("[data-dual]");
             initDualConverter({ container });
