--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <meta name="twitter:description" content="Free browser-based engineering calculators. Beam bending, bolt torque, vibration analysis, and more." />
     <meta name="twitter:image" content="https://transparent.tools/og-image.png" />
 
-    <!-- Google Analytics - Replace GA_MEASUREMENT_ID with your actual ID -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YG3SBRRZFZ"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'GA_MEASUREMENT_ID');
+      gtag('config', 'G-YG3SBRRZFZ');
     </script>
 
     <style>
