--- a/tools/beam-bending/index.html
+++ b/tools/beam-bending/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YG3SBRRZFZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-YG3SBRRZFZ');
+    </script>
+
     <title>Beam Bending Calculator - Engineering Tools</title>
     <meta name="description" content="Calculate deflection, stress, shear and bending moment for beams with various support conditions and loading. Includes safety checks and interactive diagrams.">
 
