--- a/tools/fits/index.html
+++ b/tools/fits/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YG3SBRRZFZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-YG3SBRRZFZ');
+    </script>
+
     <title>Engineering Fits Calculator - ISO 286</title>
     <meta name="description" content="ISO 286 engineering fits calculator with tolerance zones, clearance/interference analysis, and fit selection guidance.">
 
