--- a/tools/torque-transfer/index.html
+++ b/tools/torque-transfer/index.html
@@ -4,6 +4,16 @@
   <meta charset="utf-8" />
   <title>Torque Transfer Calculator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YG3SBRRZFZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-YG3SBRRZFZ');
+  </script>
+
   <script src="https://cdn.jsdelivr.net/pyodide/v0.23.3/full/pyodide.js"></script>
   <style>
     body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; margin: 0; padding: 0; background: #f0f2f5; color: #1c1e21; line-height: 1.4; font-size: 14px; }
