Adds sitemap legal about and robots.txt

--- a/index.html
+++ b/index.html
@@ -355,9 +355,13 @@
     </main>
 
     <footer>
-      &copy; <span id="year"></span> Engineering Tools. Built for learning and
-      rapid engineering trade studies. <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a>
-</footer>
+      <div style="margin-bottom: 0.5rem;">
+        <a href="/about.html" style="color: #52606d; margin-right: 1rem;">About</a>
+        <a href="/legal.html" style="color: #52606d; margin-right: 1rem;">Terms & Privacy</a>
+        <a class="support-link" href="https://ko-fi.com/transparent_tools" target="_blank" rel="noopener">Support on Ko-fi</a>
+      </div>
+      &copy; <span id="year"></span> Transparent Tools. Built for learning and rapid engineering trade studies.
+    </footer>
 
     <script>
       const searchInput = document.getElementById("search");
