Removes claude from bolt torque tools

--- a/tools/bolt-torque-exp/index.html
+++ b/tools/bolt-torque-exp/index.html
@@ -875,7 +875,7 @@
 
     <script>
         // === CONFIGURATION ===
-        const TOOL_MODULE_NAME = 'fasteners_claude';
+        const TOOL_MODULE_NAME = 'fasteners';
         const ISO_SIZES = [
             "M2x0.4", "M2.5x0.45", "M3x0.5", "M4x0.7", "M5x0.8",
             "M6x1.0", "M8x1.25", "M8x1.0", "M10x1.5", "M10x1.25",
@@ -999,7 +999,7 @@
                     jointType = document.getElementById('joint_type').value;
                 }
 
-                const result = pyToolModule.analyze_bolted_joint_claude(
+                const result = pyToolModule.analyze_bolted_joint(
                     document.getElementById('fastener_size').value,
                     document.getElementById('bolt_grade').value,
                     gripLength, clampedModulus, axialLoad, shearLoad, tighteningMethod, surfaceCondition, 20, 1, jointType, 'machined'
