--- a/tools/bolt-torque/index.html
+++ b/tools/bolt-torque/index.html
@@ -1589,8 +1589,8 @@
 
     <script>
         // === CONFIGURATION ===
-        const TOOL_MODULE_NAME = 'fasteners_claude';
-        const TOOL_FUNCTION_NAME = 'analyze_bolted_joint_claude';
+        const TOOL_MODULE_NAME = 'fasteners';
+        const TOOL_FUNCTION_NAME = 'analyze_bolted_joint';
 
         // Fastener databases for dynamic dropdowns
         const ISO_SIZES = [
