--- a/tools/example_tool_advanced/index.html
+++ b/tools/example_tool_advanced/index.html
@@ -1303,7 +1303,7 @@
                         <ul>
                             <li>AGENTS.md - Full documentation of patterns</li>
                             <li>DESIGN.md - CSS specifications for components</li>
-                            <li>tools/bolt-torque_claude/ - Production example</li>
+                            <li>tools/bolt-torque/ - Production example</li>
                         </ul>
                     </div>
                 </div>
