--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         "Unit Converter",
         "Reynolds Number Explorer",
         "Battery Runtime Estimator",
-        "Bolt Torque Calculator (VDI 2230)_claude",
+        "Bolt Torque Calculator (VDI 2230)",
         "Beam Bending Calculator",
         "Wire Sizing Calculator"
       ];
